syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.iammikrostoritve";
option java_outer_classname = "LabelGrpcProto";

import "common.proto";

service LabelGrpcService {
  rpc GetAll (Empty) returns (stream LabelProto) {}
  rpc GetById (LabelIdProto) returns (LabelProto) {}
  rpc Insert (InsertLabelProto) returns (Empty) {}
  rpc Delete (LabelIdProto) returns (Empty) {}
}

message LabelProto {
  string id = 1;
  string name = 2;
  string country = 3;
}

message InsertLabelProto {
  string name = 1;
  string country = 2;
}

message LabelIdProto {
  string id = 1;
}
